# llama.cpp

./: CMakeLists.txt  gitlog.txt  logcompile.txt
examples/simple/: CMakeLists.txt  simple.cpp
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c
ggml_tinkering/: cp.sh
include/: sim.h
llmworkload/: CMakeLists.txt  a.out  ggmlt.c  llama-cli  llama-simple  read.md
pre-attn-norm-roi/: cp_bin.sh  llama-simple  requirement.txt
src/: CMakeLists.txt  llama.cpp
